--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -55,6 +56,10 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "@prisma/client": "^5.14.0",
+    "bcryptjs": "^2.4.3",
+    "next-auth": "^4.22.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
@@ -63,6 +68,7 @@
     "zustand": "latest"
   },
   "devDependencies": {
+    "prisma": "^5.14.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
